# android-sdk-custom

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  get_source.py  repos.json  test_pattern.sh
.github/workflows/: build.yml  docker-image.yml  make-sdk.yml  make_sdk.yml  make_sdk_bionic.yml  make_sdk_bsd.yml  make_sdk_linux.yml  make_sdk_macos.yml  make_sdk_windows.yml
build-tools/: aapt.cmake  aapt2.cmake  aidl.cmake  dexdump.cmake  split-select.cmake  zipalign.cmake
docker/: Dockerfile
include/: android_content_res.h  com_android_art_native_flags.h  com_android_art_rw_flags.h
include/android/: fdsan.h
include/sys/: system_properties.h
lib/: CMakeLists.txt  libandroidfw.cmake  libbase.cmake  libbuildversion.cmake  libcrypto_utils.cmake  libcutils.cmake  libincfs.cmake  liblog.cmake  liblp.cmake  libmdnssd.cmake  libopenscreen.cmake  libpackagelistparser.cmake  libprocessgroup.cmake  libprotoc.cmake  libselinux.cmake  libsepol.cmake  libusb.cmake  libutils.cmake  libziparchive.cmake
others/: CMakeLists.txt  simpleperf.cmake  veridex.cmake
patches/: 0001-add-static-support-back-to-brotli.patch  protobuf_CMakeLists.txt.patch
patches/bsd-compat/: byteswap.h  malloc.h  network_interface_bsd.cc  winsock2.h
patches/libusb-bsd/: config.h
patches/misc/: CombinedIterator.h  adb-mdns-openscreen-fallback.patch  adb_usb_bsd.cpp  adb_usb_windows_libusb.cpp  adbmdns-netwatch-android.patch  bionic_compat.h  bionic_prop_compat.h  fastboot_usb_libusb.cpp  freebsd_usb.c  getrandom_fillin.h  host_compat.h  instruction_set.cc  instruction_set.h  instruction_set_test.cc  libbase-file-resize_and_overwrite.patch  mem_map.h  mips64-int-ll64.h  platform_tools_version.h  strl_compat.h  target.h  unscaledcycleclock.cc  upb-aarch64-windows-no-asm.patch
patches/misc/host_compat/: stdio_ext.h
patches/misc/host_compat/sys/: vfs.h
patches/misc/mac_compat/: mac_selinux_compat.h
patches/misc/win-compat/arpa/: inet.h
patches/misc/win_compat/: dlfcn.h  poll.h  win_selinux_compat.h
patches/misc/win_compat/sys/: statvfs.h  xattr.h
patches/musl/zig/lib/libc/musl/src/network/: resolvconf.c
patches/selinux/: 0001-host-portability-guards.patch
patches/termux/: README.md  termux_adb.h  termux_fastboot.h
patches/termux/libtermuxadb/src/: lib.rs
platform-tools/: CMakeLists.txt  adb.cmake  dmtracedump.cmake  e2fsprogs.cmake  etc1tool.cmake  f2fs-tools.cmake  fastboot.cmake  hprof-conv.cmake  sqlite3.cmake
scripts/: build.sh  fetch-source.sh  make-sdk.sh  patch-source.sh
src/: faked_functions.cpp  faked_functions.h
tests/: test_invariant_resolvconf.c
